--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>welcome to Androgenius-codes</title>
+        <title>welcome to Androgenius-codes portfolio website</title>
         <link rel="stylesheet" href="style.css">
 
         
@@ -39,10 +39,10 @@
                  <div class="calculator list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Calculator\"> calculator</a>
                  </div>
 
-                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\portfolio1\"> Business website</a>
+                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio1\"> Business website</a>
                  </div>
 
-                 <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\portfolio3\"> Business website 2</a>
+                 <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio3\"> Business website 2</a>
                  </div>
 
                  <div class="pizza list"><a target="_blank" rel="noopener noreferrer" href="pizza/index.html"> Restaurant website sample</a>
