--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>welcome to Androgenius-codes portfolio website</title>
         <link rel="stylesheet" href="style.css">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         
     </head>
     <body>
