--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
                  <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio1\"> Business website</a>
                  </div>
 
-                 <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio3\"> Business website 2</a>
-                 </div>
+  
+    
 
                  <div class="pizza list"><a target="_blank" rel="noopener noreferrer" href="pizza/index.html"> Restaurant website sample</a>
                  </div>
 
+
+               <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio3\"> Business website 2</a> </div>
                  <div class="weather-app list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\weather\"> weather App</a>
                  </div>
 
