--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                  <div class="calculator list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Calculator\"> calculator</a>
                  </div>
 
-                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio1\"> Business website</a>
+                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Androgenius\portfolio1\"> Business website</a>
                  </div>
 
   
@@ -51,7 +51,7 @@
                  </div>
 
 
-               <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\AndroGenius\portfolio3\"> Business website 2</a> </div>
+               <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Androgenius\portfolio3\"> Business website 2</a> </div>
                  <div class="weather-app list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\weather\"> weather App</a>
                  </div>
 
