--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>welcome to Androgenius-codes portfolio website</title>
+        <title>welcome to Androgenius-codes</title>
         <link rel="stylesheet" href="style.css">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         
     </head>
     <body>
@@ -20,9 +18,10 @@
             </div>
 
             <div class="about" >
-                <p class="my-name">Living .E. Jamala</p>
+                <div class="my-name"><p>Living .E. Jamala</p></div>
                 <p class="bio"><q>Passionate front-end web developer with 3 years of experience using React,Vanilla JavaScript, HTML5, and CSS to build all aspects of the user experience and user interface</q></p>
                 <div class="git"><a href="https://github.com/AndroGenius-codes" target="_blank" rel="noopener noreferrer">Github Page</a></div>
+                <div class="codepen"><a href="https://codepen.io/androgenius-codes">Codepen</a></div>
                 <!--contact-->
                 <div class="contact">
                     <p>Email: Livingenaanasebh@gmail.com | tel: +234-8168237848</p>
@@ -37,26 +36,36 @@
            <!--portfolio-->
            <div class="portfolio">
              <div class="project"><h1>PROJECTS SAMPLES</h1></div>
-             <div class="projects">
+             <div class="projects mobileHide">
                  <div class="calculator list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Calculator\"> calculator</a>
                  </div>
 
-                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Androgenius\portfolio1\"> Business website</a>
+                 <div class="website-one list"><a target="_blank" rel="noopener noreferrer" href=" https://androgenius-codes.github.io/Androgenius/portfolio1"> Business website</a>
                  </div>
 
-  
-    
+                 <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https://androgenius-codes.github.io/Androgenius/portfolio3"> Business website 2</a>
+                 </div>
 
                  <div class="pizza list"><a target="_blank" rel="noopener noreferrer" href="pizza/index.html"> Restaurant website sample</a>
                  </div>
 
-
-               <div class="website-two list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Androgenius\portfolio3\"> Business website 2</a> </div>
                  <div class="weather-app list"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\weather\"> weather App</a>
                  </div>
 
                  <div class="behance list"><a target="_blank" rel="noopener noreferrer" href="https:\\behance.net/enaanasliving">Graphic design portfolio</a>
                  </div>
+             </div>
+
+             <!--Mobile-->
+             <div class="mobileShow">
+                 <ul class="port">
+                     <li data-emoji="🤪" class="port1" class="portLink"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\Calculator\"> calculator</a></li>
+                     <li data-emoji="😴"  class="port2" class="portLink"><a target="_blank" rel="noopener noreferrer" href=" https://androgenius-codes.github.io/Androgenius/portfolio1"> Business website</a></li>
+                     <li data-emoji="😁" class="port3" class="portLink"><a target="_blank" rel="noopener noreferrer" href="pizza/index.html"> Restaurant website sample</a></li>
+                     <li data-emoji="🤠" class="port4" class="portLink"><a target="_blank" rel="noopener noreferrer" href="pizza/index.html"> Restaurant website sample</a></li>
+                     <li data-emoji="😁" class="port5" class="portLink"><a target="_blank" rel="noopener noreferrer" href="https:\\androgenius-codes.github.io\weather\"> weather App</a></li>
+                     <li data-emoji="🤪" class="port6" class="portLink"><a target="_blank" rel="noopener noreferrer" href="https:\\behance.net/enaanasliving">Graphic design portfolio</a></li>
+                 </ul>
              </div>
            </div>
         </section>
